Add caching, exports, parsers and UI improvements
Bump plugin version and toolchain, upgrade dependencies, and introduce several new features and refactors.

Key changes:
- Version and build: bump plugin to 1.1.4, upgrade Jackson to 3.1.0 and Gradle wrapper to 9.4.0.
- OsvClient: replaced Java HttpClient calls with IntelliJ HttpRequests (improves IDE proxy/keychain behavior), added in-memory response caching with configurable TTL, and improved batch request handling.
- Reporting: extended ReportExportService to export JSON, CSV and a simplified SARIF payload in addition to HTML/PDF.
- UI: SapoToolWindow updated to support CSV export, refactored export flow to select format string, adjusted layout and timeouts, and minor presentation cleanups.
- Dependency parsing: DependencyParser extended to detect npm (package.json), Python (requirements.txt) and Go (go.mod) dependencies, plus various robustness fixes.
- New features: added ProjectSapoSettings (persistent settings), ProjectSyncListener (trigger scans after project resolve), annotator and quick-fix placeholders (DependencyAnnotator, UpdateDependencyQuickFix), and SapoIgnoreParser to filter ignored deps during scans.
- Misc: small formatting/refactorings, null/IO handling improvements, and updated/removed related tests.

These changes add caching and export capabilities, broaden dependency detection, and improve IDE integration for network calls and user settings.