@@ -29,15 +29,15 @@ class SeverityAnalyzerTest {
   @DisplayName("should_extract_severity_from_database_specific")
   void shouldExtractFromDatabaseSpecific() {
     // Given
-    OsvVulnerability vuln = new OsvVulnerability(
-        "CVE-2024-001",
-        "Test vulnerability",
-        "Description",
-        null,
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Map.of("severity", "HIGH")
-    );
+    OsvVulnerability vuln =
+        new OsvVulnerability(
+            "CVE-2024-001",
+            "Test vulnerability",
+            "Description",
+            null,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Map.of("severity", "HIGH"));
 
     // When
     String severity = analyzer.getSeverity(vuln);
@@ -50,15 +50,15 @@ class SeverityAnalyzerTest {
   @DisplayName("should_extract_severity_from_cvss_v3")
   void shouldExtractFromCvssV3() {
     // Given
-    OsvVulnerability vuln = new OsvVulnerability(
-        "CVE-2024-002",
-        "Test vulnerability",
-        "Description",
-        List.of(new OsvVulnerability.Severity("CVSS_V3", "8.5")),
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Collections.emptyMap()
-    );
+    OsvVulnerability vuln =
+        new OsvVulnerability(
+            "CVE-2024-002",
+            "Test vulnerability",
+            "Description",
+            List.of(new OsvVulnerability.Severity("CVSS_V3", "8.5")),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyMap());
 
     // When
     String severity = analyzer.getSeverity(vuln);
@@ -71,15 +71,15 @@ class SeverityAnalyzerTest {
   @DisplayName("should_return_medium_when_no_severity")
   void shouldReturnMediumDefault() {
     // Given
-    OsvVulnerability vuln = new OsvVulnerability(
-        "CVE-2024-003",
-        "Test vulnerability",
-        "Description",
-        null,
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Collections.emptyMap()
-    );
+    OsvVulnerability vuln =
+        new OsvVulnerability(
+            "CVE-2024-003",
+            "Test vulnerability",
+            "Description",
+            null,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyMap());
 
     // When
     String severity = analyzer.getSeverity(vuln);
@@ -92,24 +92,24 @@ class SeverityAnalyzerTest {
   @DisplayName("should_get_highest_severity_from_list")
   void shouldGetHighestFromList() {
     // Given
-    OsvVulnerability low = new OsvVulnerability(
-        "CVE-LOW",
-        "Low",
-        "Low",
-        List.of(new OsvVulnerability.Severity("CVSS_V3", "3.5")),
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Collections.emptyMap()
-    );
-    OsvVulnerability high = new OsvVulnerability(
-        "CVE-HIGH",
-        "High",
-        "High",
-        List.of(new OsvVulnerability.Severity("CVSS_V3", "8.0")),
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Collections.emptyMap()
-    );
+    OsvVulnerability low =
+        new OsvVulnerability(
+            "CVE-LOW",
+            "Low",
+            "Low",
+            List.of(new OsvVulnerability.Severity("CVSS_V3", "3.5")),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyMap());
+    OsvVulnerability high =
+        new OsvVulnerability(
+            "CVE-HIGH",
+            "High",
+            "High",
+            List.of(new OsvVulnerability.Severity("CVSS_V3", "8.0")),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyMap());
 
     // When
     String highest = analyzer.getHighestSeverity(List.of(low, high));
@@ -122,15 +122,15 @@ class SeverityAnalyzerTest {
   @DisplayName("should_normalize_moderate_to_medium")
   void shouldNormalizeModerate() {
     // Given
-    OsvVulnerability vuln = new OsvVulnerability(
-        "CVE-2024-004",
-        "Test",
-        "Test",
-        null,
-        Collections.emptyList(),
-        Collections.emptyList(),
-        Map.of("severity", "MODERATE")
-    );
+    OsvVulnerability vuln =
+        new OsvVulnerability(
+            "CVE-2024-004",
+            "Test",
+            "Test",
+            null,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Map.of("severity", "MODERATE"));
 
     // When
     String severity = analyzer.getSeverity(vuln);
@@ -139,4 +139,3 @@ class SeverityAnalyzerTest {
     assertThat(severity).isEqualTo("MEDIUM");
   }
 }
-
